--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "react-scripts": "3.0.1",
     "tinygallery": "^1.1.4"
   },
+  "homepage": "https://gyrad.github.io/unsplash-search",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
